<resources>
    <string name="app_name">Forget Me Not</string>
    <string name="name">Name</string>
    <string name="age_sex">Age (Sex)</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="chat">Chat</string>
    <string name="detail_info">Detail Info</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_caretaker_register_patient">Register patient</string>
    <string name="btn_caretaker_update_patient_info">Update Patient Information</string>
</resources>